--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -5,9 +5,10 @@
     <title>${productTitle}</title>
 
     <link href="${cssHome}carbon-components.min.css" rel="stylesheet" type="text/css" />
-    <link href="${cssHome}carbon-overrides.css" rel="stylesheet" type="text/css" />
+    <link href="${cssHome}carbon-overrides-common.css" rel="stylesheet" type="text/css" />
 
     <link href="${cssHome}not-electron.css" rel="stylesheet" type="text/css" />
+    <link href="${cssHome}kui-tables-common.css" rel="stylesheet" type="text/css" />
     <link href="${cssHome}ui.css" rel="stylesheet" type="text/css" />
     <link href="${cssHome}${tabStripe}" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.5.0/balloon.min.css" rel="stylesheet" type="text/css" />
@@ -90,7 +91,8 @@
                           <span class="repl-context"></span>
                           <span class="repl-selection clickable" title="The current selection"></span>
                           <span class="repl-prompt-righty">
-                            <i class="fas fa-chevron-right"></i>
+                            <!-- ChevronRight20 -->
+                            <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true"><path d="M22 16L12 26l-1.4-1.4 8.6-8.6-8.6-8.6L12 6z"></path></svg>
                           </span>
                         </div>
                         <input type="text" class="repl-input-element" autofocus autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" xxx_no_placeholder="enter your command" />
