--- a/packages/app/web/css/top-tab-stripe.css
+++ b/packages/app/web/css/top-tab-stripe.css
@@ -255,3 +255,8 @@ body[kui-theme-style="dark"]
 .left-tab-stripe-button.smaller-button i.fas {
   font-size: 0.75em;
 }
+
+.kui-header__title {
+  /* by default, don't show tool name in top tab */
+  display: none;
+}
