feat: alternate example client
Fixes #2128

--- a/clients/alternate/theme/css/themes/carbon-gray10.css
+++ b/clients/alternate/theme/css/themes/carbon-gray10.css
@@ -1,5 +1,5 @@
 /* color variables */
-body[kui-theme="Carbon gray10"] {
+body[kui-theme="IBM Light"] {
   --color-base00: #ffffff;
   --color-base01: #f3f3f3;
   --color-base02: #8c8c8c;
