--- a/clients/alternate/theme/css/top-tab-stripe-alt.css
+++ b/clients/alternate/theme/css/top-tab-stripe-alt.css
@@ -27,6 +27,10 @@
   z-index: 1;
 }
 
+.kui-header #help-button {
+    display: none;
+}
+
 .kui-header__title {
   padding-right: 28px;
   border-right: 2px solid #dfe3e6;
