--- a/plugins/plugin-core-support/web/css/confirm.css
+++ b/plugins/plugin-core-support/web/css/confirm.css
@@ -1,3 +1,9 @@
+body {
+  /* provide default values for these color classes */
+  --color-confirm-background: var(--color-base02);
+  --color-confirm-foreground: var(--color-base07);
+}
+
 #confirm-dialog {
   position: absolute;
   top: 35%;
@@ -9,6 +15,8 @@
   height: 15em;
   flex-direction: column;
   z-index: 5;
+  background: var(--color-confirm-background);
+  color: var(--color-confirm-foreground);
 }
 
 .close-button {
@@ -16,7 +24,7 @@
 }
 
 .button-custon {
-  border: none;
+  border: none !important;
   outline: none;
 }
 
